@@ -16,28 +16,25 @@
 
 package org.eclipse.paho.mqttv5.client;
 
-import java.io.ByteArrayOutputStream;
-import java.io.DataOutputStream;
 import java.util.Hashtable;
+import java.util.List;
 import java.util.Properties;
 import java.util.Timer;
 import java.util.TimerTask;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
+import java.io.ByteArrayOutputStream;
+import java.io.DataOutputStream;
+import java.net.URI;
 
-import javax.net.SocketFactory;
-import org.eclipse.paho.mqttv5.client.internal.ClientComms;
-import org.eclipse.paho.mqttv5.client.internal.ConnectActionListener;
-import org.eclipse.paho.mqttv5.client.internal.DisconnectedMessageBuffer;
-import org.eclipse.paho.mqttv5.client.internal.MqttConnectionState;
-import org.eclipse.paho.mqttv5.client.internal.MqttSessionState;
-import org.eclipse.paho.mqttv5.client.internal.NetworkModule;
-import org.eclipse.paho.mqttv5.client.internal.NetworkModuleService;
+import org.eclipse.paho.mqttv5.client.IMqttAsyncClient;
+import org.eclipse.paho.mqttv5.client.MqttClientInterface;
+import org.eclipse.paho.mqttv5.client.MqttClientPersistence;
+import org.eclipse.paho.mqttv5.client.internal.ClientInternal;
+import org.eclipse.paho.mqttv5.client.internal.ConnectionState;
+import org.eclipse.paho.mqttv5.client.logging.Logger;
+import org.eclipse.paho.mqttv5.client.logging.LoggerFactory;
 import org.eclipse.paho.mqttv5.client.persist.MemoryPersistence;
 import org.eclipse.paho.mqttv5.client.persist.MqttDefaultFilePersistence;
 import org.eclipse.paho.mqttv5.client.util.Debug;
-import org.eclipse.paho.mqttv5.client.logging.Logger;
-import org.eclipse.paho.mqttv5.client.logging.LoggerFactory;
 import org.eclipse.paho.mqttv5.common.ExceptionHelper;
 import org.eclipse.paho.mqttv5.common.MqttException;
 import org.eclipse.paho.mqttv5.common.MqttMessage;
@@ -46,13 +43,13 @@ import org.eclipse.paho.mqttv5.common.MqttSecurityException;
 import org.eclipse.paho.mqttv5.common.MqttSubscription;
 import org.eclipse.paho.mqttv5.common.packet.MqttAuth;
 import org.eclipse.paho.mqttv5.common.packet.MqttDataTypes;
-import org.eclipse.paho.mqttv5.common.packet.MqttDisconnect;
 import org.eclipse.paho.mqttv5.common.packet.MqttProperties;
-import org.eclipse.paho.mqttv5.common.packet.MqttPublish;
 import org.eclipse.paho.mqttv5.common.packet.MqttReturnCode;
-import org.eclipse.paho.mqttv5.common.packet.MqttSubscribe;
-import org.eclipse.paho.mqttv5.common.packet.MqttUnsubscribe;
+import org.eclipse.paho.mqttv5.common.packet.MqttWireMessage;
 import org.eclipse.paho.mqttv5.common.util.MqttTopicValidator;
+
+import javax.net.SocketFactory;
+
 
 /**
  * Lightweight client for talking to an MQTT server using non-blocking methods
@@ -226,29 +223,24 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	private static final long DISCONNECT_TIMEOUT = 10000; // ms
 	private static final char MIN_HIGH_SURROGATE = '\uD800';
 	private static final char MAX_HIGH_SURROGATE = '\uDBFF';
-	// private String clientId;
-	private String serverURI;
-	protected ClientComms comms;
+
 	private Hashtable<String, MqttTopic> topics;
-	private MqttClientPersistence persistence;
 	private MqttCallback mqttCallback;
-	private MqttConnectionOptions connOpts;
+
 	private Object userContext;
 	private Timer reconnectTimer; // Automatic reconnect timer
 	private static int reconnectDelay = 1000; // Reconnect delay, starts at 1
 												// second
-	private boolean reconnecting = false;
-	private static Object clientLock = new Object(); // Simple lock
-
-	// Variables that exist within the life of an MQTT session
-	private MqttSessionState mqttSession = new MqttSessionState();
-
-	// Variables that exist within the life of an MQTT connection.
-	private MqttConnectionState mqttConnection = new MqttConnectionState(); 
+	private URI serverURI;
+	private MqttClientPersistence persistence;
+	private MqttConnectionOptions connOpts;
+	private DisconnectedBufferOptions bufferOpts = new DisconnectedBufferOptions();
 	
-	private ScheduledExecutorService executorService;
-	private MqttPingSender pingSender;
-
+	// Variables that exist within the life of an MQTT connection.
+	private ConnectionState connectionstate; 
+	
+	private ClientInternal internal; 
+	
 	/**
 	 * Create an MqttAsyncClient that is used to communicate with an MQTT server.
 	 * <p>
@@ -435,9 +427,9 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 * @throws MqttException
 	 *             if any other problem was encountered
 	 */
-	public MqttAsyncClient(String serverURI, String clientId, MqttClientPersistence persistence) throws MqttException {
-		this(serverURI, clientId, persistence, null, null);
-	}
+	/*public MqttAsyncClient(String serverURI, String clientId, MqttClientPersistence persistence) throws MqttException {
+		this(serverURI, clientId, persistence, null);
+	}*/
 
 	/**
 	 * Create an MqttAsyncClient that is used to communicate with an MQTT server.
@@ -533,12 +525,6 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 * @param persistence
 	 *            the persistence class to use to store in-flight message. If null
 	 *            then the default persistence mechanism is used
-	 * @param pingSender
-	 *            the {@link MqttPingSender} Implementation to handle timing and
-	 *            sending Ping messages to the server.
-	 * @param executorService
-	 *            used for managing threads. If null then a newScheduledThreadPool
-	 *            is used.
 	 * @throws IllegalArgumentException
 	 *             if the URI does not start with "tcp://", "ssl://" or "local://"
 	 * @throws IllegalArgumentException
@@ -547,8 +533,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 * @throws MqttException
 	 *             if any other problem was encountered
 	 */
-	public MqttAsyncClient(String serverURI, String clientId, MqttClientPersistence persistence,
-			MqttPingSender pingSender, ScheduledExecutorService executorService) throws MqttException {
+	public MqttAsyncClient(String serverURI, String clientId, MqttClientPersistence persistence) 
+			throws MqttException {
 		final String methodName = "MqttAsyncClient";
 
 		log.setResourceName(clientId);
@@ -568,32 +554,29 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 			clientId = "";
 		}
 
-		NetworkModuleService.validateURI(serverURI);
-
-		this.serverURI = serverURI;
-		this.mqttSession.setClientId(clientId);
+		try {
+			this.serverURI = new URI(serverURI);
+		} catch (Exception e) {
+			throw new MqttException(MqttException.REASON_CODE_INVALID_IDENTIFIER);
+		}
 
 		this.persistence = persistence;
 		if (this.persistence == null) {
 			this.persistence = new MemoryPersistence();
 		}
-
-		this.executorService = executorService;
-
-		this.pingSender = pingSender;
-		if (this.pingSender == null) {
-			this.pingSender = new TimerPingSender(this.executorService);
-		}
+		internal = new ClientInternal(this, persistence);
+		internal.setClientId(clientId);
+		connectionstate = internal.getConnectionState();
 
 		// @TRACE 101=<init> ClientID={0} ServerURI={1} PersistenceType={2}
 		log.fine(CLASS_NAME, methodName, "101", new Object[] { clientId, serverURI, persistence });
 
-		this.persistence.open(clientId);
-		this.comms = new ClientComms(this, this.persistence, this.pingSender, this.executorService, this.mqttSession,
-				this.mqttConnection);
-		this.persistence.close();
-		this.topics = new Hashtable<String, MqttTopic>();
+		if (persistence != null) {
+			this.persistence.open(clientId);
+		}
 
+				
+		this.topics = new Hashtable<String, MqttTopic>();
 	}
 
 	/**
@@ -605,69 +588,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		return (ch >= MIN_HIGH_SURROGATE) && (ch <= MAX_HIGH_SURROGATE);
 	}
 
-	/**
-	 * Factory method to create an array of network modules, one for each of the
-	 * supplied URIs
-	 *
-	 * @param address
-	 *            the URI for the server.
-	 * @param options
-	 *            the {@link MqttConnectionOptions} for the connection.
-	 * @return a network module appropriate to the specified address.
-	 * @throws MqttException
-	 *             if an exception occurs creating the network Modules
-	 * @throws MqttSecurityException
-	 *             if an issue occurs creating an SSL / TLS Socket
-	 */
-	protected NetworkModule[] createNetworkModules(String address, MqttConnectionOptions options)
-			throws MqttException, MqttSecurityException {
-		final String methodName = "createNetworkModules";
-		// @TRACE 116=URI={0}
-		log.fine(CLASS_NAME, methodName, "116", new Object[] { address });
-
-		NetworkModule[] networkModules = null;
-		String[] serverURIs = options.getServerURIs();
-		String[] array = null;
-		if (serverURIs == null) {
-			array = new String[] { address };
-		} else if (serverURIs.length == 0) {
-			array = new String[] { address };
-		} else {
-			array = serverURIs;
-		}
-
-		networkModules = new NetworkModule[array.length];
-		for (int i = 0; i < array.length; i++) {
-			networkModules[i] = createNetworkModule(array[i], options);
-		}
-
-		log.fine(CLASS_NAME, methodName, "108");
-		return networkModules;
-	}
-
-	/**
-	 * Factory method to create the correct network module, based on the supplied
-	 * address URI.
-	 *
-	 * @param address
-	 *            the URI for the server.
-	 * @param options
-	 *            Connect options
-	 * @return a network module appropriate to the specified address.
-	 */
-	private NetworkModule createNetworkModule(String address, MqttConnectionOptions options)
-			throws MqttException, MqttSecurityException {
-		final String methodName = "createNetworkModule";
-		// @TRACE 115=URI={0}
-		log.fine(CLASS_NAME, methodName, "115", new Object[] { address });
-
-
-		NetworkModule netModule = NetworkModuleService.createInstance(address, options, mqttSession.getClientId());
-
-		return netModule;
-	}
-
-	private String getHostName(String uri) {
+	/*private String getHostName(String uri) {
 		int portIndex = uri.indexOf(':');
 		if (portIndex == -1) {
 			portIndex = uri.indexOf('/');
@@ -676,7 +597,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 			portIndex = uri.length();
 		}
 		return uri.substring(0, portIndex);
-	}
+	}*/
 
 	/*
 	 * (non-Javadoc)
@@ -725,63 +646,108 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	public IMqttToken connect(MqttConnectionOptions options, Object userContext, MqttActionListener callback)
 			throws MqttException, MqttSecurityException {
 		final String methodName = "connect";
-		if (comms.isConnected()) {
-			throw ExceptionHelper.createMqttException(MqttClientException.REASON_CODE_CLIENT_CONNECTED);
-		}
-		if (comms.isConnecting()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CONNECT_IN_PROGRESS);
-		}
-		if (comms.isDisconnecting()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CLIENT_DISCONNECTING);
-		}
-		if (comms.isClosed()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CLIENT_CLOSED);
-		}
-		if (options == null) {
-			options = new MqttConnectionOptions();
-		}
-		this.connOpts = options;
-		this.userContext = userContext;
-		final boolean automaticReconnect = options.isAutomaticReconnect();
 
-		// @TRACE 103=cleanStart={0} connectionTimeout={1} TimekeepAlive={2}
+		// @TRACE 103=cleanSession={0} connectionTimeout={1} TimekeepAlive={2}
 		// userName={3} password={4} will={5} userContext={6} callback={7}
 		log.fine(CLASS_NAME, methodName, "103",
 				new Object[] { Boolean.valueOf(options.isCleanStart()), new Integer(options.getConnectionTimeout()),
-						new Integer(options.getKeepAliveInterval()), options.getUserName(),
+						Integer.valueOf(options.getKeepAliveInterval()), options.getUserName(),
 						((null == options.getPassword()) ? "[null]" : "[notnull]"),
 						((null == options.getWillMessage()) ? "[null]" : "[notnull]"), userContext, callback });
-		comms.setNetworkModules(createNetworkModules(serverURI, options));
-		comms.setReconnectCallback(new MqttReconnectCallback(automaticReconnect));
 
-		// Insert our own callback to iterate through the URIs till the connect
-		// succeeds
-		MqttToken userToken = new MqttToken(getClientId());
-		ConnectActionListener connectActionListener = new ConnectActionListener(this, persistence, comms, options,
-				userToken, userContext, callback, reconnecting, mqttSession, mqttConnection);
-		userToken.setActionCallback(connectActionListener);
-		userToken.setUserContext(this);
-
-		this.mqttConnection.setSendReasonMessages(this.connOpts.isSendReasonMessages());
-
-		// If we are using the MqttCallbackExtended, set it on the
-		// connectActionListener
-		if (this.mqttCallback instanceof MqttCallback) {
-			connectActionListener.setMqttCallbackExtended((MqttCallback) this.mqttCallback);
+		MqttToken connectToken = new MqttToken(getClientId());
+		
+		String[] serverURIs = options.getServerURIs();
+		if (serverURIs == null) {
+			serverURIs = new String[] {serverURI.toString()};
 		}
 
-		if (this.connOpts.isCleanStart()) {
-			this.mqttSession.clearSessionState();
-		}
-		this.mqttConnection.clearConnectionState();
-
-		this.mqttConnection.setIncomingTopicAliasMax(this.connOpts.getTopicAliasMaximum());
-
-		comms.setNetworkModuleIndex(0);
-		connectActionListener.connect();
-
-		return userToken;
+		connOpts = options;
+		internal.connect(options, connectToken, serverURIs, 0, null);
+		
+		return connectToken;
 	}
+	
+	/*
+	public static VariableByteInteger readVariableByteInteger(Buffer in) throws IOException {
+		byte digit;
+		int value = 0;
+		int multiplier = 1;
+		int count = 0;
+
+		do {
+			digit = in.getByte(count + 1);
+			count++;
+			value += ((digit & 0x7F) * multiplier);
+			multiplier *= 128;
+		} while ((digit & 0x80) != 0);
+
+		if (value < 0 || value > MqttDataTypes.VARIABLE_BYTE_INT_MAX) {
+			throw new IOException("This property must be a number between 0 and " + 
+					MqttDataTypes.VARIABLE_BYTE_INT_MAX
+					+ ". Read value was: " + value);
+		}
+		return new VariableByteInteger(value, count);
+	}
+	
+	Buffer tempBuffer = Buffer.buffer();
+	VariableByteInteger remlen = null;
+	int packet_len = 0;
+	
+	private MqttWireMessage getPacket(Buffer buffer) {
+		MqttWireMessage msg = null;
+		try {
+			if (tempBuffer.length() == 0) {
+				if (buffer == null) {
+					return null; // no more MQTT packets in the data
+				}
+				remlen = readVariableByteInteger(buffer);
+				packet_len = remlen.getValue() + remlen.getEncodedLength() + 1;
+				if (packet_len <= buffer.length()) { // we have at least 1 complete packet
+					msg = MqttWireMessage.createWireMessage(buffer.getBytes(0, packet_len));
+					// put any unused data into the temporary buffer
+					if (buffer.length() > packet_len) {
+						tempBuffer.appendBuffer(buffer, packet_len, buffer.length() - packet_len);
+						remlen = null; // just in case there aren't enough bytes for the VBI
+						remlen = readVariableByteInteger(tempBuffer);
+						packet_len = remlen.getValue() + remlen.getEncodedLength() + 1;
+					}
+				} else {
+					// incomplete packet
+					tempBuffer.appendBuffer(buffer);
+					return null;
+				}
+			} else {
+				if (buffer != null) {
+					tempBuffer.appendBuffer(buffer);
+				}
+				if (remlen == null) {
+					remlen = readVariableByteInteger(tempBuffer);
+					packet_len = remlen.getValue() + remlen.getEncodedLength() + 1;
+				}
+				if (tempBuffer.length() >= packet_len) {
+					msg = MqttWireMessage.createWireMessage(tempBuffer.getBytes(0, packet_len));
+					if (tempBuffer.length() > packet_len) {
+						// leave unused data in the temporary buffer
+						tempBuffer = tempBuffer.getBuffer(packet_len, tempBuffer.length());
+						remlen = null; // just in case there aren't enough bytes for the VBI
+						remlen = readVariableByteInteger(tempBuffer);
+						packet_len = remlen.getValue() + remlen.getEncodedLength() + 1;
+					} else {
+						tempBuffer = Buffer.buffer();
+					}
+				} else {
+					return null;
+				}
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			return null;
+		}
+
+		return msg;
+	}
+		*/
 
 	/*
 	 * (non-Javadoc)
@@ -833,77 +799,23 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
 		token.setUserContext(userContext);
+		
+		internal.getSessionState().setShouldBeConnected(false);
+		internal.disconnect(reasonCode, disconnectProperties, token);
 
-		MqttDisconnect disconnect = new MqttDisconnect(reasonCode, disconnectProperties);
-
-		try {
-			comms.disconnect(disconnect, quiesceTimeout, token);
-		} catch (MqttException ex) {
-			// @TRACE 105=< exception
-			log.fine(CLASS_NAME, methodName, "105", null, ex);
-			throw ex;
-		}
 		// @TRACE 108=<
 		log.fine(CLASS_NAME, methodName, "108");
-
 		return token;
 	}
 
 	/*
 	 * (non-Javadoc)
 	 * 
-	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#disconnectForcibly()
-	 */
-	@Override
-	public void disconnectForcibly() throws MqttException {
-		disconnectForcibly(QUIESCE_TIMEOUT, DISCONNECT_TIMEOUT, MqttReturnCode.RETURN_CODE_SUCCESS,
-				new MqttProperties());
-	}
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#disconnectForcibly(long)
-	 */
-	@Override
-	public void disconnectForcibly(long disconnectTimeout) throws MqttException {
-		disconnectForcibly(QUIESCE_TIMEOUT, disconnectTimeout, MqttReturnCode.RETURN_CODE_SUCCESS,
-				new MqttProperties());
-	}
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#disconnectForcibly(long,
-	 * long, int, org.eclipse.paho.mqttv5.common.packet.MqttProperties)
-	 */
-	@Override
-	public void disconnectForcibly(long quiesceTimeout, long disconnectTimeout, int reasonCode,
-			MqttProperties disconnectProperties) throws MqttException {
-		comms.disconnectForcibly(quiesceTimeout, disconnectTimeout, reasonCode, disconnectProperties);
-	}
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#disconnectForcibly(long,
-	 * long, boolean)
-	 */
-	@Override
-	public void disconnectForcibly(long quiesceTimeout, long disconnectTimeout, boolean sendDisconnectPacket)
-			throws MqttException {
-		comms.disconnectForcibly(quiesceTimeout, disconnectTimeout, sendDisconnectPacket,
-				MqttReturnCode.RETURN_CODE_SUCCESS, new MqttProperties());
-	}
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#isConnected()
+	 * @see IMqttAsyncClient#isConnected()
 	 */
 	@Override
 	public boolean isConnected() {
-		return comms.isConnected();
+		return internal.isConnected();
 	}
 
 	/*
@@ -913,7 +825,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public String getClientId() {
-		return this.mqttSession.getClientId();
+		return internal.getClientId();
 	}
 
 	/*
@@ -924,7 +836,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public void setClientId(String clientId) {
-		this.mqttSession.setClientId(clientId);
+		internal.setClientId(clientId);
 	}
 
 	/*
@@ -934,7 +846,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public String getServerURI() {
-		return serverURI;
+		return serverURI.toString();
 	}
 
 	/*
@@ -944,7 +856,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public String getCurrentServerURI() {
-		return comms.getNetworkModules()[comms.getNetworkModuleIndex()].getServerURI();
+		return null; //comms.getNetworkModules()[comms.getNetworkModuleIndex()].getServerURI();
 	}
 
 	/**
@@ -1000,7 +912,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 
 		MqttTopic result = (MqttTopic) topics.get(topic);
 		if (result == null) {
-			result = new MqttTopic(topic, comms);
+			result = new MqttTopic(topic, internal);
 			topics.put(topic, result);
 		}
 		return result;
@@ -1025,11 +937,11 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	@Override
 	public IMqttToken checkPing(Object userContext, MqttActionListener callback) throws MqttException {
 		final String methodName = "ping";
-		MqttToken token;
+		MqttToken token = null;
 		// @TRACE 117=>
 		log.fine(CLASS_NAME, methodName, "117");
 
-		token = comms.checkForActivity(callback);
+		//token = comms.checkForActivity(callback);
 		// @TRACE 118=<
 		log.fine(CLASS_NAME, methodName, "118");
 
@@ -1117,11 +1029,11 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 
 		// remove any message handlers for individual topics and validate Topics
 		for (int i = 0; i < subscriptions.length; ++i) {
-			this.comms.removeMessageListener(subscriptions[i].getTopic());
+			//this.comms.removeMessageListener(subscriptions[i].getTopic());
 			// Check if the topic filter is valid before subscribing
 			MqttTopicValidator.validate(subscriptions[i].getTopic(),
-					this.mqttConnection.isWildcardSubscriptionsAvailable(),
-					this.mqttConnection.isSharedSubscriptionsAvailable());
+					this.connectionstate.isWildcardSubscriptionsAvailable(),
+					this.connectionstate.isSharedSubscriptionsAvailable());
 		}
 		
 		return this.subscribeBase(subscriptions, userContext, callback, subscriptionProperties);
@@ -1151,9 +1063,12 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		// token.internalTok.setTopics(topicFilters);
 		// TODO - Build up MQTT Subscriptions properly here
 
-		MqttSubscribe register = new MqttSubscribe(subscriptions, subscriptionProperties);
+		try {
+			internal.subscribe(subscriptions, subscriptionProperties, token);
+		} catch (MqttException e) {
+			
+		}
 
-		comms.sendNoWait(register, token);
 		// @TRACE 109=<
 		log.fine(CLASS_NAME, methodName, "109");
 
@@ -1224,12 +1139,14 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		// add message handlers to the list for this client
 		for (int i = 0; i < subscriptions.length; ++i) {
 			MqttTopicValidator.validate(subscriptions[i].getTopic(),
-					this.mqttConnection.isWildcardSubscriptionsAvailable(),
-					this.mqttConnection.isSharedSubscriptionsAvailable());
+					this.connectionstate.isWildcardSubscriptionsAvailable(),
+					this.connectionstate.isSharedSubscriptionsAvailable());
 			if (messageListeners == null || messageListeners[i] == null) {
-				this.comms.removeMessageListener(subscriptions[i].getTopic());
+				Integer subId = subscriptionProperties.getSubscriptionIdentifier();
+				internal.removeMessageListener(subId, subscriptions[i].getTopic());
 			} else {
-				this.comms.setMessageListener(null, subscriptions[i].getTopic(), messageListeners[i]);
+				Integer subId = subscriptionProperties.getSubscriptionIdentifier();
+				internal.setMessageListener(subId, subscriptions[i].getTopic(), messageListeners[i]);
 			}
 		}
 		
@@ -1239,7 +1156,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		} catch(Exception e) {
 			// if the subscribe fails, then we have to remove the message handlers
 			for (int i = 0; i < subscriptions.length; ++i) {
-				this.comms.removeMessageListener(subscriptions[i].getTopic());
+				Integer subId = subscriptionProperties.getSubscriptionIdentifier();
+				internal.removeMessageListener(subId, subscriptions[i].getTopic());
 			}
 			throw e;
 		}
@@ -1260,35 +1178,39 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	public IMqttToken subscribe(MqttSubscription[] subscriptions, Object userContext, MqttActionListener callback,
 			IMqttMessageListener messageListener, MqttProperties subscriptionProperties) throws MqttException {
 
-		int subId = subscriptionProperties.getSubscriptionIdentifiers().get(0);
+		int subId = 0;
+		List<Integer> x = subscriptionProperties.getSubscriptionIdentifiers();
+		if (x.size() > 0) {
+			subId = x.get(0);
+		}
 
 		// Automatic Subscription Identifier Assignment is enabled
-		if (connOpts.useSubscriptionIdentifiers() && this.mqttConnection.isSubscriptionIdentifiersAvailable()) {
+		if (connOpts.useSubscriptionIdentifiers() && this.connectionstate.isSubscriptionIdentifiersAvailable()) {
 
 			// Application is overriding the subscription Identifier
 			if (subId != 0) {
-				// Check that we are not already using this ID, else throw Illegal Argument
-				// Exception
-				if (this.comms.doesSubscriptionIdentifierExist(subId)) {
+				// Check that we are not already using this ID, else throw an exception
+				/*if (this.comms.doesSubscriptionIdentifierExist(subId)) {
 					throw new IllegalArgumentException(
 							String.format("The Subscription Identifier %s already exists.", subId));
-				}
+				}*/
 
 			} else {
 				// Automatically assign new ID and link to callback.
-				subId = this.mqttSession.getNextSubscriptionIdentifier();
+				subId = internal.getSessionState().getNextSubscriptionIdentifier();
+				subscriptionProperties.setSubscriptionIdentifier(subId);
 			}
 		}
 		
 		// add message handlers to the list for this client
 		for (int i = 0; i < subscriptions.length; ++i) {
 			MqttTopicValidator.validate(subscriptions[i].getTopic(),
-					this.mqttConnection.isWildcardSubscriptionsAvailable(),
-					this.mqttConnection.isSharedSubscriptionsAvailable());
+					this.connectionstate.isWildcardSubscriptionsAvailable(),
+					this.connectionstate.isSharedSubscriptionsAvailable());
 			if (messageListener == null) {
-				this.comms.removeMessageListener(subscriptions[i].getTopic());
+				internal.removeMessageListener(subId, subscriptions[i].getTopic());
 			} else {
-				this.comms.setMessageListener(subId, subscriptions[i].getTopic(), messageListener);
+				internal.setMessageListener(subId, subscriptions[i].getTopic(), messageListener);
 			}
 		}
 
@@ -1298,7 +1220,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		} catch(Exception e) {
 			// if the subscribe fails, then we have to remove the message handlers
 			for (int i = 0; i < subscriptions.length; ++i) {
-				this.comms.removeMessageListener(subscriptions[i].getTopic());
+				internal.removeMessageListener(subId, subscriptions[i].getTopic());
 			}
 			throw e;
 		}
@@ -1356,16 +1278,16 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 
 		// Only Generate Log string if we are logging at FINE level
 		if (log.isLoggable(Logger.FINE)) {
-			String subs = "";
+			StringBuilder subs = new StringBuilder();
 			for (int i = 0; i < topicFilters.length; i++) {
 				if (i > 0) {
-					subs += ", ";
+					subs.append(", ");
 				}
-				subs += topicFilters[i];
+				subs.append(topicFilters[i]);
 			}
 
 			// @TRACE 107=Unsubscribe topic={0} userContext={1} callback={2}
-			log.fine(CLASS_NAME, methodName, "107", new Object[] { subs, userContext, callback });
+			log.fine(CLASS_NAME, methodName, "107", new Object[] {subs.toString(), userContext, callback });
 		}
 
 		for (int i = 0; i < topicFilters.length; i++) {
@@ -1373,22 +1295,21 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 			// Although we already checked when subscribing, but invalid
 			// topic filter is meanless for unsubscribing, just prohibit it
 			// to reduce unnecessary control packet send to broker.
-			MqttTopicValidator.validate(topicFilters[i], true/* allow wildcards */, this.mqttConnection.isSharedSubscriptionsAvailable());
+			MqttTopicValidator.validate(topicFilters[i], true/* allow wildcards */, this.connectionstate.isSharedSubscriptionsAvailable());
 		}
 
 		// remove message handlers from the list for this client
 		for (int i = 0; i < topicFilters.length; ++i) {
-			this.comms.removeMessageListener(topicFilters[i]);
+			//this.comms.removeMessageListener(topicFilters[i]);
 		}
 
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
 		token.setUserContext(userContext);
-		token.internalTok.setTopics(topicFilters);
+		//token.internalTok.setTopics(topicFilters);
 
-		MqttUnsubscribe unregister = new MqttUnsubscribe(topicFilters, unsubscribeProperties);
+		internal.unsubscribe(topicFilters, unsubscribeProperties, token);
 
-		comms.sendNoWait(unregister, token);
 		// @TRACE 110=<
 		log.fine(CLASS_NAME, methodName, "110");
 
@@ -1405,7 +1326,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	@Override
 	public void setCallback(MqttCallback callback) {
 		this.mqttCallback = callback;
-		comms.setCallback(callback);
+		//comms.setCallback(callback);
 	}
 
 	/*
@@ -1415,7 +1336,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public void setManualAcks(boolean manualAcks) {
-		comms.setManualAcks(manualAcks);
+		//comms.setManualAcks(manualAcks);
 	}
 
 	/*
@@ -1427,7 +1348,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public void messageArrivedComplete(int messageId, int qos) throws MqttException {
-		comms.messageArrivedComplete(messageId, qos);
+		//comms.messageArrivedComplete(messageId, qos);
 	}
 
 	/*
@@ -1438,7 +1359,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public IMqttDeliveryToken[] getPendingDeliveryTokens() {
-		return comms.getPendingDeliveryTokens();
+		return null; //comms.getPendingDeliveryTokens();
 	}
 
 	/*
@@ -1508,14 +1429,12 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		token.setActionCallback(callback);
 		token.setUserContext(userContext);
 		token.setMessage(message);
-		token.internalTok.setTopics(new String[] { topic });
+		//token.internalTok.setTopics(new String[] { topic });
 
-		MqttPublish pubMsg = new MqttPublish(topic, message, message.getProperties());
-		comms.sendNoWait(pubMsg, token);
+		internal.publish(topic, message, token);
 
 		// @TRACE 112=<
 		log.fine(CLASS_NAME, methodName, "112");
-
 		return token;
 	}
 
@@ -1528,84 +1447,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	public void reconnect() throws MqttException {
 		final String methodName = "reconnect";
 		// @Trace 500=Attempting to reconnect client: {0}
-		log.fine(CLASS_NAME, methodName, "500", new Object[] { this.mqttSession.getClientId() });
-		// Some checks to make sure that we're not attempting to reconnect an
-		// already connected client
-		if (comms.isConnected()) {
-			throw ExceptionHelper.createMqttException(MqttClientException.REASON_CODE_CLIENT_CONNECTED);
-		}
-		if (comms.isConnecting()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CONNECT_IN_PROGRESS);
-		}
-		if (comms.isDisconnecting()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CLIENT_DISCONNECTING);
-		}
-		if (comms.isClosed()) {
-			throw new MqttException(MqttClientException.REASON_CODE_CLIENT_CLOSED);
-		}
-		// We don't want to spam the server
-		stopReconnectCycle();
-
-		attemptReconnect();
-	}
-
-	/**
-	 * Attempts to reconnect the client to the server. If successful it will make
-	 * sure that there are no further reconnects scheduled. However if the connect
-	 * fails, the delay will double up to 128 seconds and will re-schedule the
-	 * reconnect for after the delay.
-	 *
-	 * Any thrown exceptions are logged but not acted upon as it is assumed that
-	 * they are being thrown due to the server being offline and so reconnect
-	 * attempts will continue.
-	 */
-	private void attemptReconnect() {
-		final String methodName = "attemptReconnect";
-		// @Trace 500=Attempting to reconnect client: {0}
-		log.fine(CLASS_NAME, methodName, "500", new Object[] { this.mqttSession.getClientId() });
-		try {
-			connect(this.connOpts, this.userContext, new MqttReconnectActionListener(methodName));
-		} catch (MqttSecurityException ex) {
-			// @TRACE 804=exception
-			log.fine(CLASS_NAME, methodName, "804", null, ex);
-		} catch (MqttException ex) {
-			// @TRACE 804=exception
-			log.fine(CLASS_NAME, methodName, "804", null, ex);
-		}
-	}
-
-	private void startReconnectCycle() {
-		String methodName = "startReconnectCycle";
-		// @Trace 503=Start reconnect timer for client: {0}, delay: {1}
-		log.fine(CLASS_NAME, methodName, "503",
-				new Object[] { this.mqttSession.getClientId(), new Long(reconnectDelay) });
-		reconnectTimer = new Timer("MQTT Reconnect: " + this.mqttSession.getClientId());
-		reconnectTimer.schedule(new ReconnectTask(), reconnectDelay);
-	}
-
-	private void stopReconnectCycle() {
-		String methodName = "stopReconnectCycle";
-		// @Trace 504=Stop reconnect timer for client: {0}
-		log.fine(CLASS_NAME, methodName, "504", new Object[] { this.mqttSession.getClientId() });
-		synchronized (clientLock) {
-			if (this.connOpts.isAutomaticReconnect()) {
-				if (reconnectTimer != null) {
-					reconnectTimer.cancel();
-					reconnectTimer = null;
-				}
-				reconnectDelay = 1000; // Reset Delay Timer
-			}
-		}
-	}
-
-	private class ReconnectTask extends TimerTask {
-		private static final String methodName = "ReconnectTask.run";
-
-		public void run() {
-			// @Trace 506=Triggering Automatic Reconnect attempt.
-			log.fine(CLASS_NAME, methodName, "506");
-			attemptReconnect();
-		}
+		log.fine(CLASS_NAME, methodName, "500", new Object[] { internal.getClientId() });
+		
 	}
 
 	class MqttReconnectCallback implements MqttCallback {
@@ -1627,11 +1470,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 
 		public void disconnected(MqttDisconnectResponse disconnectResponse) {
 			if (automaticReconnect) {
-				// Automatic reconnect is set so make sure comms is in resting
-				// state
-				comms.setRestingState(true);
-				reconnecting = true;
-				startReconnectCycle();
+				//reconnecting = true;
+				//startReconnectCycle();
 			}
 		}
 
@@ -1655,8 +1495,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		public void onSuccess(IMqttToken asyncActionToken) {
 			// @Trace 501=Automatic Reconnect Successful: {0}
 			log.fine(CLASS_NAME, methodName, "501", new Object[] { asyncActionToken.getClient().getClientId() });
-			comms.setRestingState(false);
-			stopReconnectCycle();
+			//comms.setRestingState(false);
+			//stopReconnectCycle();
 		}
 
 		public void onFailure(IMqttToken asyncActionToken, Throwable exception) {
@@ -1665,26 +1505,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 			if (reconnectDelay < connOpts.getMaxReconnectDelay()) {
 				reconnectDelay = reconnectDelay * 2;
 			}
-			rescheduleReconnectCycle(reconnectDelay);
-		}
-
-		private void rescheduleReconnectCycle(int delay) {
-			String reschedulemethodName = methodName + ":rescheduleReconnectCycle";
-			// @Trace 505=Rescheduling reconnect timer for client: {0}, delay:
-			// {1}
-			log.fine(CLASS_NAME, reschedulemethodName, "505",
-					new Object[] { MqttAsyncClient.this.mqttSession.getClientId(), String.valueOf(reconnectDelay) });
-			synchronized (clientLock) {
-				if (MqttAsyncClient.this.connOpts.isAutomaticReconnect()) {
-					if (reconnectTimer != null) {
-						reconnectTimer.schedule(new ReconnectTask(), delay);
-					} else {
-						// The previous reconnect timer was cancelled
-						reconnectDelay = delay;
-						startReconnectCycle();
-					}
-				}
-			}
+			//rescheduleReconnectCycle(reconnectDelay);
 		}
 
 	}
@@ -1698,7 +1519,15 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public void setBufferOpts(DisconnectedBufferOptions bufferOpts) {
-		this.comms.setDisconnectedMessageBuffer(new DisconnectedMessageBuffer(bufferOpts));
+		this.bufferOpts = bufferOpts;
+	}
+	
+	public DisconnectedBufferOptions getBufferOpts() {
+		return bufferOpts;
+	}
+	
+	public MqttConnectionOptions getConnectOpts() {
+		return connOpts;
 	}
 
 	/*
@@ -1709,7 +1538,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public int getBufferedMessageCount() {
-		return this.comms.getBufferedMessageCount();
+		return internal.getBufferedMessageCount();
 	}
 
 	/*
@@ -1718,8 +1547,8 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#getBufferedMessage(int)
 	 */
 	@Override
-	public MqttMessage getBufferedMessage(int bufferIndex) {
-		return this.comms.getBufferedMessage(bufferIndex);
+	public MqttWireMessage getBufferedMessage(int bufferIndex) {
+		return internal.getBufferedMessage(bufferIndex);
 	}
 
 	/*
@@ -1730,7 +1559,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public void deleteBufferedMessage(int bufferIndex) {
-		this.comms.deleteBufferedMessage(bufferIndex);
+		internal.deleteBufferedMessage(bufferIndex);
 	}
 
 	/*
@@ -1741,7 +1570,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 	 */
 	@Override
 	public int getInFlightMessageCount() {
-		return this.comms.getActualInFlight();
+		return 0; //this.comms.getActualInFlight();
 	}
 
 	/*
@@ -1764,20 +1593,24 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		final String methodName = "close";
 		// @TRACE 113=<
 		log.fine(CLASS_NAME, methodName, "113");
-		comms.close(force);
+		internal.close();
 		// @TRACE 114=>
 		log.fine(CLASS_NAME, methodName, "114");
 
 	}
-
-	/*
-	 * (non-Javadoc)
+	
+	public MqttCallback getCallback() {
+		return this.mqttCallback;
+	}
+	
+	/**
+	 * Return a debug object that can be used to help solve problems.
 	 * 
 	 * @see org.eclipse.paho.mqttv5.client.IMqttAsyncClient#getDebug()
 	 */
 	@Override
 	public Debug getDebug() {
-		return new Debug(this.mqttSession.getClientId(), comms);
+		return null; //new Debug(this.mqttSession.getClientId(), comms);
 	}
 
 	@Override
@@ -1786,7 +1619,7 @@ public class MqttAsyncClient implements MqttClientInterface, IMqttAsyncClient {
 		token.setUserContext(userContext);
 
 		MqttAuth auth = new MqttAuth(reasonCode, properties);
-		comms.sendNoWait(auth, token);
+		//comms.sendNoWait(auth, token);
 		return null;
 	}
 
